保持SurfaceTexture，不释放底层资源，验证了SurfaceTexture能够复用，当Activity被系统销毁后再次重建能够快速切到摄像头预览。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@android:style/Theme.Light.NoTitleBar">
-        <activity android:name=".CameraActivity">
+        <activity android:name=".CameraTextureActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -24,7 +24,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".CameraTextureActivity" />
+        <activity android:name=".CameraActivity" />
     </application>
 
 </manifest>
